--- a/botsettings.json
+++ b/botsettings.json
@@ -1,4 +1,4 @@
 {
-  "token": "NzE4MjA4NzAyMzA1MjcxODIw.Xuu2HA.7rb9ClkCMJwo53fyoWMaXQ6Zm1I",
+  "token": "Your_bot's_token_goes_here",
   "prefix": "!"
 }
